# fire-rs-saop

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  clone_data_id.enc  demo_propagation.py  main.py  plot_elevation.py  setup.py  spread_param_sampling.py
cpp/: CMakeLists.txt
cpp/IMC/: CMakeLists.txt
cpp/IMC/Base/: ByteBuffer.hpp  ByteCopy.hpp  CRC16.hpp  Clock.hpp  Config.hpp  Exceptions.hpp  Factory.cpp  Factory.hpp  InlineMessage.hpp  JSON.hpp  Message.hpp  MessageList.hpp  Packet.hpp  Parser.hpp  Platform.hpp  Serialization.hpp  String.hpp
cpp/IMC/Spec/: Abort.hpp  Aborted.hpp  Acceleration.hpp  AcousticLink.hpp  AcousticMessage.hpp  AcousticOperation.hpp  AcousticSystems.hpp  AcousticSystemsQuery.hpp  AirSaturation.hpp  Airflow.hpp  AlignmentState.hpp  AllMessages.hpp  AllocatedControlTorques.hpp  AngularVelocity.hpp  Announce.hpp  AnnounceService.hpp  ApmStatus.hpp  AutonomousSection.hpp  AutopilotMode.hpp  BeamConfig.hpp  Bitfields.hpp  Blob.hpp  Brake.hpp  ButtonEvent.hpp  CacheControl.hpp  Calibration.hpp  CameraZoom.hpp  CcuEvent.hpp  Chlorophyll.hpp  ClockControl.hpp  CloseSession.hpp  Collision.hpp  CommsRelay.hpp  CompassCalibration.hpp  CompressedHistory.hpp  CompressedImage.hpp  Conductivity.hpp  Constants.hpp  ControlCommand.hpp  ControlLoops.hpp  (+264 more)
cpp/src/: PythonLoggerSink.cpp  PythonLoggerSink.hpp  cpp_py_utils.hpp  dubins3d.h  dubins3d.hpp  fire_data.h  firemapping_py.cpp  neptus_py.cpp  plan.h  planning.h  planning_py.cpp  python_interface.cpp  raster.h  raster.hpp  saop_logging.cpp  saop_logging.hpp  trajectory.h  uav.h  utils.cpp  utils.h  utils.hpp  visibility.h  vns_interface.h  waypoint.h
cpp/src/core/: SharedQueue.hpp  dubins3d.cpp  dubins3d.hpp  dubinswind.cpp  dubinswind.hpp  fire_data.cpp  fire_data.hpp  raster.hpp  trajectories.hpp  trajectory.cpp  trajectory.hpp  uav.cpp  uav.hpp  waypoint.hpp
cpp/src/core/structures/: trajectories.h  trajectories.hpp  trajectory.h  trajectory.hpp  uav.h  uav.hpp  waypoint.h  waypoint.hpp
cpp/src/core/updates/: plan_updates.cpp  updates.cpp  updates.h  updates.hpp
cpp/src/exec/: IMCMessageFactory.hpp  imc_message_factories.hpp  saop_neptus.hpp
cpp/src/ext/: ThreadPool.hpp  WGS84.hpp  coordinates.hpp  dubins.cpp  dubins.h  optional.hpp
cpp/src/firemapping/: ghostmapper.hpp
cpp/src/neighborhoods/: dubins_optimization.h  insertions.h  moves.h  smoothing.h
cpp/src/neptus/: geography.hpp  imc_comm.cpp  imc_comm.hpp  imc_message_factories.hpp  main.cpp  saop_neptus.hpp  saop_server.cpp  saop_server.hpp  saop_to_dune.hpp
cpp/src/test/: main_imc_client.cpp  main_imc_server.cpp  main_saop_to_dune.cpp  main_tests.cpp  test_dubins.h  test_dubins.hpp  test_dubinswind.hpp  test_position_manipulation.h  test_position_manipulation.hpp
cpp/src/test/core/: test_reversible_updates.h  test_reversible_updates.hpp
cpp/src/vns/: factory.cpp  factory.h  factory.hpp  fire_data.h  fire_data.hpp  plan.cpp  plan.h  plan.hpp  planning.h  utility.cpp  utility.hpp  visibility.h  visibility.hpp  vns_interface.h  vns_interface.hpp
cpp/src/vns/neighborhoods/: dubins_optimization.h  dubins_optimization.hpp  insertions.h  insertions.hpp  moves.h  moves.hpp  shuffling.h  shuffling.hpp  smoothing.h  smoothing.hpp
doc/: Makefile  conf.py  coordinate_frames.rst  coordinate_frames.txt  firemapping.rst  firemodel.rst  geodata.rst  index.rst  neptus_interface.rst  simulation.rst  uav_planning.rst
docker/: Dockerfile  run.bash  run.sh
fire_rs/: bibliography.txt  deprecation.py  display.py  environment.py  test_environment.py  test_wind.py  wind.py  wind_test.py
fire_rs/planning-cpp/: CMakeLists.txt
fire_rs/planning-cpp/src/: debug.h  dubins.cpp  dubins3d.h  fire_data.h  local_search.h  main.cpp  optional.h  plan.h  planning.h  python_interface.cpp  raster.h  trajectory.h  uav.h  utils.h  visibility.h  vns_interface.h  waypoint.h
fire_rs/planning-cpp/src/ext/: dubins.cpp  dubins.h  optional.h
fire_rs/planning-cpp/src/neighborhoods/: contour_following.h  dubins_optimization.h  insertions.h  moves.h  shuffling.h  smoothing.h
fire_rs/planning-cpp/src/test/: main.cpp  main_dubins.cpp  main_tests.cpp
morse_sim/: default.py
python/: CMakeLists.txt  MANIFEST.in  setup.py
python/fire_rs/: __init__.py  bibliography.txt  demo_animationdisplay.py  demo_front_interpolation.py  demo_laea_maps.py  demo_neptusinterface.py  demo_propagation_highres.py  demo_seganosa.py  demo_situation_assessment_stages.py  demo_traj_allocation.py  display.py  libwden.py  main_loop.py  neptus_mission_analysis.py  rbf.py  supersaop.py  supersaop_main.py
python/fire_rs/firemodel/: __init__.py  demo_propagation.py  demo_propagation_neptus.py  environment.pxd  environment.pyx  fireshapes.pyx  propagation.py  rothermel.pxd  rothermel.pyx  test_fireshapes.py  test_propagation.py  test_rothermel.py
python/fire_rs/firemodel/notebooks/: fire_shapes.ipynb  rothermel.ipynb
python/fire_rs/geodata/: __init__.py  basemap.py  clustering.py  display.py  elevation.py  environment.py  geo_data.py  landcover.py  test_elevation.py  test_environment.py  test_geodata.py  test_wind.py  wildfire.py  wind.py
python/fire_rs/monitoring/: __init__.py  situation_assessment_interpolation_benchmark.py  situation_assessment_warping_benchmark.py  supersaop.py  ui.py
python/fire_rs/planning/: __init__.py  benchmark.py  demo_dubins3dpath.py  demo_dubins_csc.py  demo_dubinswind.py  demo_dubinswind_path.py  demo_neptusinterface.py  demo_plan_and_execution.py  demo_replanning.py  demo_slowuav.py  demo_storyboard.py  demo_winterpaper.py  display.py  front_observation.py  lab_utility_map.py  new_planning.py  observation_path_search.py  planning.py  scenario_factory_collection.py  test_dubins3dpath.py  test_uav.py  test_uav_planning_cpp.py  tree_search.py  uav.py
python/fire_rs/simulation/: __init__.py  demo_morsewildfire.py  fakefiremapper.py  morse.py  wildfire.py
scripts/: asc_lambert93_to_tif.sh  benchmark_stats.py  crop_raster.py  figure_dubins2d.py  raster_resample.sh  run_bench.sh
supersaop/: CMakeLists.txt  README.md  (+1 more)
(+105 files in other folders)
