set(BASE_SOURCES Base/ByteBuffer.hpp
        Base/ByteCopy.hpp
        Base/Clock.hpp
        Base/Config.hpp
        Base/CRC16.hpp
        Base/Exceptions.hpp
        Base/Factory.cpp
        Base/Factory.hpp
        Base/InlineMessage.hpp
        Base/JSON.hpp
        Base/Message.hpp
        Base/MessageList.hpp
        Base/Packet.hpp
        Base/Parser.hpp
        Base/Platform.hpp
        Base/Serialization.hpp
        Base/String.hpp)

set(SPEC_SOURCES Spec/Abort.hpp
        Spec/Aborted.hpp
        Spec/Acceleration.hpp
        Spec/AcousticLink.hpp
        Spec/AcousticMessage.hpp
        Spec/AcousticOperation.hpp
        Spec/AcousticSystems.hpp
        Spec/AcousticSystemsQuery.hpp
        Spec/Airflow.hpp
        Spec/AirSaturation.hpp
        Spec/AlignmentState.hpp
        Spec/AllMessages.hpp
        Spec/AllocatedControlTorques.hpp
        Spec/AngularVelocity.hpp
        Spec/Announce.hpp
        Spec/AnnounceService.hpp
        Spec/ApmStatus.hpp
        Spec/AutonomousSection.hpp
        Spec/AutopilotMode.hpp
        Spec/BeamConfig.hpp
        Spec/Bitfields.hpp
        Spec/Blob.hpp
        Spec/Brake.hpp
        Spec/ButtonEvent.hpp
        Spec/CacheControl.hpp
        Spec/Calibration.hpp
        Spec/CameraZoom.hpp
        Spec/CcuEvent.hpp
        Spec/Chlorophyll.hpp
        Spec/ClockControl.hpp
        Spec/CloseSession.hpp
        Spec/Collision.hpp
        Spec/CommsRelay.hpp
        Spec/CompassCalibration.hpp
        Spec/CompressedHistory.hpp
        Spec/CompressedImage.hpp
        Spec/Conductivity.hpp
        Spec/Constants.hpp
        Spec/ControlCommand.hpp
        Spec/ControlLoops.hpp
        Spec/ControlParcel.hpp
        Spec/CoverArea.hpp
        Spec/CpuUsage.hpp
        Spec/CreateSession.hpp
        Spec/CrudeOil.hpp
        Spec/Current.hpp
        Spec/CustomManeuver.hpp
        Spec/DataSanity.hpp
        Spec/Depth.hpp
        Spec/DepthOffset.hpp
        Spec/DesiredControl.hpp
        Spec/DesiredHeading.hpp
        Spec/DesiredHeadingRate.hpp
        Spec/DesiredLinearState.hpp
        Spec/DesiredPath.hpp
        Spec/DesiredPitch.hpp
        Spec/DesiredRoll.hpp
        Spec/DesiredSpeed.hpp
        Spec/DesiredThrottle.hpp
        Spec/DesiredVelocity.hpp
        Spec/DesiredVerticalRate.hpp
        Spec/DesiredZ.hpp
        Spec/DevCalibrationControl.hpp
        Spec/DevCalibrationState.hpp
        Spec/DevDataBinary.hpp
        Spec/DevDataText.hpp
        Spec/DeviceState.hpp
        Spec/Dislodge.hpp
        Spec/DissolvedOrganicMatter.hpp
        Spec/DissolvedOxygen.hpp
        Spec/Distance.hpp
        Spec/Drop.hpp
        Spec/DvlRejection.hpp
        Spec/DynamicsSimParam.hpp
        Spec/Elevator.hpp
        Spec/EmergencyControl.hpp
        Spec/EmergencyControlState.hpp
        Spec/EntityActivationState.hpp
        Spec/EntityInfo.hpp
        Spec/EntityList.hpp
        Spec/EntityMonitoringState.hpp
        Spec/EntityParameter.hpp
        Spec/EntityParameters.hpp
        Spec/EntityState.hpp
        Spec/Enumerations.hpp
        Spec/EstimatedState.hpp
        Spec/EstimatedStreamVelocity.hpp
        Spec/EulerAngles.hpp
        Spec/EulerAnglesDelta.hpp
        Spec/Event.hpp
        Spec/ExtendedRSSI.hpp
        Spec/ExternalNavData.hpp
        Spec/Factory.xdef
        Spec/FineOil.hpp
        Spec/Fluorescein.hpp
        Spec/FollowPath.hpp
        Spec/FollowPoint.hpp
        Spec/FollowReference.hpp
        Spec/FollowRefState.hpp
        Spec/FollowSystem.hpp
        Spec/FollowTrajectory.hpp
        Spec/Force.hpp
        Spec/Formation.hpp
        Spec/FormationControlParams.hpp
        Spec/FormationEval.hpp
        Spec/FormationEvaluation.hpp
        Spec/FormationMonitor.hpp
        Spec/FormationParameters.hpp
        Spec/FormationPlanExecution.hpp
        Spec/FormationState.hpp
        Spec/FormCtrlParam.hpp
        Spec/FormState.hpp
        Spec/FuelLevel.hpp
        Spec/GetImageCoords.hpp
        Spec/GetOperationalLimits.hpp
        Spec/GetParametersXml.hpp
        Spec/GetWorldCoordinates.hpp
        Spec/Goto.hpp
        Spec/GpsFix.hpp
        Spec/GpsFixRejection.hpp
        Spec/GpsFixRtk.hpp
        Spec/GpsNavData.hpp
        Spec/GroundVelocity.hpp
        Spec/GroupMembershipState.hpp
        Spec/GroupStreamVelocity.hpp
        Spec/Header.hpp
        Spec/Heartbeat.hpp
        Spec/HistoricCTD.hpp
        Spec/HistoricData.hpp
        Spec/HistoricDataQuery.hpp
        Spec/HistoricEvent.hpp
        Spec/HistoricSample.hpp
        Spec/HistoricSonarData.hpp
        Spec/HistoricTelemetry.hpp
        Spec/IdleManeuver.hpp
        Spec/ImageTracking.hpp
        Spec/ImageTxSettings.hpp
        Spec/IndicatedSpeed.hpp
        Spec/IoEvent.hpp
        Spec/IridiumMsgRx.hpp
        Spec/IridiumMsgTx.hpp
        Spec/IridiumTxStatus.hpp
        Spec/Land.hpp
        Spec/Launch.hpp
        Spec/LblBeacon.hpp
        Spec/LblConfig.hpp
        Spec/LblEstimate.hpp
        Spec/LblRange.hpp
        Spec/LblRangeAcceptance.hpp
        Spec/LcdControl.hpp
        Spec/LeaderState.hpp
        Spec/LeakSimulation.hpp
        Spec/LedBrightness.hpp
        Spec/LinkLatency.hpp
        Spec/LinkLevel.hpp
        Spec/LogBookControl.hpp
        Spec/LogBookEntry.hpp
        Spec/LoggingControl.hpp
        Spec/Loiter.hpp
        Spec/LowLevelControl.hpp
        Spec/Macros.hpp
        Spec/MagneticField.hpp
        Spec/Maneuver.hpp
        Spec/ManeuverControlState.hpp
        Spec/Map.hpp
        Spec/MapFeature.hpp
        Spec/MapPoint.hpp
        Spec/MessagePart.hpp
        Spec/MonitorEntityState.hpp
        Spec/MsgList.hpp
        Spec/NavigationData.hpp
        Spec/NavigationUncertainty.hpp
        Spec/NeptusBlob.hpp
        Spec/OperationalLimits.hpp
        Spec/OpticalBackscatter.hpp
        Spec/ParametersXml.hpp
        Spec/PathControlState.hpp
        Spec/PathPoint.hpp
        Spec/PH.hpp
        Spec/Phycocyanin.hpp
        Spec/Phycoerythrin.hpp
        Spec/PlanControl.hpp
        Spec/PlanControlState.hpp
        Spec/PlanDB.hpp
        Spec/PlanDBInformation.hpp
        Spec/PlanDBState.hpp
        Spec/PlanGeneration.hpp
        Spec/PlanManeuver.hpp
        Spec/PlanSpecification.hpp
        Spec/PlanStatistics.hpp
        Spec/PlanTransition.hpp
        Spec/PlanVariable.hpp
        Spec/PolygonVertex.hpp
        Spec/PopEntityParameters.hpp
        Spec/PopUp.hpp
        Spec/PowerChannelControl.hpp
        Spec/PowerChannelState.hpp
        Spec/PowerOperation.hpp
        Spec/Pressure.hpp
        Spec/Pulse.hpp
        Spec/PulseDetectionControl.hpp
        Spec/PushEntityParameters.hpp
        Spec/PWM.hpp
        Spec/QueryEntityActivationState.hpp
        Spec/QueryEntityInfo.hpp
        Spec/QueryEntityParameters.hpp
        Spec/QueryEntityState.hpp
        Spec/QueryLedBrightness.hpp
        Spec/QueryPowerChannelState.hpp
        Spec/Redox.hpp
        Spec/Reference.hpp
        Spec/RegisterManeuver.hpp
        Spec/RelativeHumidity.hpp
        Spec/RelativeState.hpp
        Spec/RemoteActions.hpp
        Spec/RemoteActionsRequest.hpp
        Spec/RemoteCommand.hpp
        Spec/RemoteData.hpp
        Spec/RemoteSensorInfo.hpp
        Spec/RemoteState.hpp
        Spec/ReplayControl.hpp
        Spec/ReportControl.hpp
        Spec/ReportedState.hpp
        Spec/RestartSystem.hpp
        Spec/RhodamineDye.hpp
        Spec/Rows.hpp
        Spec/RowsCoverage.hpp
        Spec/Rpm.hpp
        Spec/RSSI.hpp
        Spec/SadcReadings.hpp
        Spec/Salinity.hpp
        Spec/Sample.hpp
        Spec/SaveEntityParameters.hpp
        Spec/ScheduledGoto.hpp
        Spec/ServoPosition.hpp
        Spec/SessionKeepAlive.hpp
        Spec/SessionStatus.hpp
        Spec/SessionSubscription.hpp
        Spec/SetControlSurfaceDeflection.hpp
        Spec/SetEntityParameters.hpp
        Spec/SetImageCoords.hpp
        Spec/SetLedBrightness.hpp
        Spec/SetPWM.hpp
        Spec/SetServoPosition.hpp
        Spec/SetThrusterActuation.hpp
        Spec/SimulatedState.hpp
        Spec/Sms.hpp
        Spec/SmsRx.hpp
        Spec/SmsState.hpp
        Spec/SmsTx.hpp
        Spec/SonarData.hpp
        Spec/SoundSpeed.hpp
        Spec/StateReport.hpp
        Spec/StationKeeping.hpp
        Spec/StopManeuver.hpp
        Spec/StorageUsage.hpp
        Spec/SystemGroup.hpp
        Spec/Tachograph.hpp
        Spec/Takeoff.hpp
        Spec/Target.hpp
        Spec/Teleoperation.hpp
        Spec/TeleoperationDone.hpp
        Spec/Temperature.hpp
        Spec/TextMessage.hpp
        Spec/Throttle.hpp
        Spec/TrajectoryPoint.hpp
        Spec/TransmissionRequest.hpp
        Spec/TransmissionStatus.hpp
        Spec/TransportBindings.hpp
        Spec/TrexAttribute.hpp
        Spec/TrexCommand.hpp
        Spec/TrexObservation.hpp
        Spec/TrexOperation.hpp
        Spec/TrexPlan.hpp
        Spec/TrexToken.hpp
        Spec/TrueSpeed.hpp
        Spec/Turbidity.hpp
        Spec/UamRxFrame.hpp
        Spec/UamRxRange.hpp
        Spec/UamTxFrame.hpp
        Spec/UamTxStatus.hpp
        Spec/UASimulation.hpp
        Spec/UsblAngles.hpp
        Spec/UsblAnglesExtended.hpp
        Spec/UsblConfig.hpp
        Spec/UsblFix.hpp
        Spec/UsblFixExtended.hpp
        Spec/UsblModem.hpp
        Spec/UsblPosition.hpp
        Spec/UsblPositionExtended.hpp
        Spec/VehicleCommand.hpp
        Spec/VehicleFormation.hpp
        Spec/VehicleFormationParticipant.hpp
        Spec/VehicleLinks.hpp
        Spec/VehicleMedium.hpp
        Spec/VehicleOperationalLimits.hpp
        Spec/VehicleState.hpp
        Spec/VelocityDelta.hpp
        Spec/Voltage.hpp
        Spec/VSWR.hpp
        Spec/WaterDensity.hpp
        Spec/WaterVelocity.hpp
        Spec/WindSpeed.hpp
        Spec/YoYo.hpp)

add_library(libimc SHARED ${BASE_SOURCES} ${SPEC_SOURCES} )
